# nodetool-huggingface

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  FIX-MODEL3D.md  HF-IMPROVEMENTS.md  MODEL3D-CORE-FUTURE.md  MODEL3D-CROSS-REPO.md  Makefile  README.md  RUNTIME_SAFETY.md  docker-compose.yaml  export_requirements.sh  pyproject.toml  requirements.txt  setup.py  test_qwen.py  ty.toml
.github/workflows/: copilot-setup-steps.yml  gcp-setup.yml  gcp-windows-gpu-script.yml  lint.yml  publish-wheel.yml  test.yml
ci/windows/: README.md  gcp_startup_ssh.ps1  gpu_entry.ps1
docs/: worker-deployment.md
examples/: audio_to_image.py  depth_estimation.py  hf-worker-smoke.json  hf-worker-smoke.ts  image_upscaling.py  runtime_safety_demo.py
notebooks/: flux_text_to_image_manual_test.ipynb  stable_diffusion_xl_test.ipynb
requirements/: hf-latest.txt  nunchaku.txt  sf3d.txt  trellis2.txt  triposr.txt
scripts/: GCP_SETUP.md  batch_thumbnail_prompts.py  check_hf_models.py  hf_dependency_smoke_test.py  profile_flux_import_hang.py  profile_flux_nunchaku_load.py  run_flux_worker_execute.py  run_sd_example.py  setup_gcp_instance.py
src/nodetool/dsl/huggingface/: audio_classification.py  automatic_speech_recognition.py  depth_estimation.py  feature_extraction.py  fill_mask.py  image_classification.py  image_segmentation.py  image_text_to_text.py  image_to_3d.py  image_to_image.py  image_to_text.py  image_to_video.py  lora.py  multimodal.py  object_detection.py  question_answering.py  ranking.py  sentence_similarity.py  sentence_transformers.py  summarization.py  text_classification.py  text_generation.py  text_to_3d.py  text_to_audio.py  text_to_image.py  text_to_speech.py  text_to_text.py  text_to_video.py  token_classification.py  translation.py  video.py
src/nodetool/examples/: Audio To Spectrogram.json  Generate Music.json  Summarize Audio.json
src/nodetool/examples/nodetool-huggingface/: Audio To Image.json  Audio To Spectrogram.json  Controlnet.json  Depth Estimation.json  Generate Music.json  Image To Audio Story.json  Image to Image.json  Movie Posters.json  Music Generator.json  Piano track.json  Pokemon Maker.json  Re-Imagine.json  Style Transfer.json  Summarize Audio.json  Transcribe Audio.json  Upscaling.json
src/nodetool/huggingface/: __init__.py  flux_utils.py  huggingface_image_provider.py  huggingface_local_provider.py  huggingface_provider.py  image_to_image_pipelines.py  local_provider_utils.py  memory_utils.py  model_memory_tracker.py  nunchaku_pipelines.py  nunchaku_utils.py  runtime_safety.py  text_to_image_pipelines.py  video_utils.py
src/nodetool/nodes/huggingface/: _3d_common.py  audio_classification.py  audio_text_to_text.py  automatic_speech_recognition.py  depth_estimation.py  document_question_answering.py  feature_extraction.py  fill_mask.py  huggingface_node.py  huggingface_pipeline.py  image_classification.py  image_segmentation.py  image_text_to_text.py  image_to_3d.py  image_to_image.py  image_to_text.py  image_to_video.py  local_3d.py  lora.py  mesh_to_mesh.py  multimodal.py  object_detection.py  prediction.py  question_answering.py  ranking.py  sentence_similarity.py  sentence_transformers.py  stable_diffusion_base.py  summarization.py  table_structure_recognition.py  text2text_generation.py  text_classification.py  text_generation.py  text_to_3d.py  text_to_audio.py  text_to_image.py  text_to_speech.py  text_to_text.py  text_to_video.py  time_series.py  (+4 more)
src/nodetool/package_metadata/: nodetool-huggingface.json
src/triposg/: UPSTREAM.md
tests/: README.md  __init__.py  conftest.py  test_audio_classification.py  test_audio_classification_audio_classifier.py  test_audio_classification_zero_shot_audio_classifier.py  test_automatic_speech_recognition.py  test_automatic_speech_recognition_chunks_to_s_r_t.py  test_automatic_speech_recognition_whisper.py  test_depth_estimation.py  test_document_question_answering.py  test_feature_extraction.py  test_fill_mask.py  test_flux_control_quantization.py  test_flux_fill_quantization.py  test_flux_kontext_quantization.py  test_flux_prior_redux_quantization.py  test_huggingface_provider.py  test_image_classification.py  test_image_classification_image_classifier.py  test_image_classification_zero_shot_image_classifier.py  test_image_segmentation.py  test_image_segmentation_find_segment.py  test_image_segmentation_mask_generation.py  test_image_segmentation_s_a_m2_segmentation.py  test_image_segmentation_segmentation.py  test_image_segmentation_visualize_segmentation.py  test_image_text_to_text.py  test_image_text_to_text_image_text_to_text.py  test_image_text_to_text_load_image_text_to_text_model.py  test_image_to_image.py  test_image_to_image_flux_fill.py  test_image_to_image_flux_kontext.py  test_image_to_image_flux_prior_redux.py  test_image_to_image_image_to_image.py  test_image_to_image_inpaint.py  test_image_to_image_load_image_to_image_model.py  test_image_to_image_omni_gen_node.py  test_image_to_image_qwen_image_edit.py  test_image_to_image_real_e_s_r_g_a_n_node.py  (+79 more)
tests/integration/: __init__.py  test_dsl_nodes.py
tests/unit/: __init__.py  test_node_imports.py  test_nodes.py  test_utils.py
