[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodetool-huggingface"
version = "0.6.0"
description = "HuggingFace nodes for Nodetool"
readme = "README.md"
authors = [{ name = "Matthias Georgi", email = "matti.georgi@gmail.com" }]
requires-python = ">=3.11"

dependencies = [
    "nodetool-core>=0.6.0,<0.7.0",
    "torch==2.7.1",
    "torchsde",
    "torchvision",
    "torchaudio",
    "hf_xet",
    "diffusers[torch]==0.34.0",
    "transformers==4.53.2",
    "paddleocr",
    "paddlepaddle",
    "quanto",
    "bitsandbytes",
    "peft>=0.15.0",
    "sentencepiece",
    "sam2",
]


[project.optional-dependencies]
# For exact version pinning in production
stable = ["nodetool-core==0.6.0"]

[tool.hatch.metadata]

[tool.hatch.build.targets.wheel]
packages = ["src/nodetool", "src/RealESRGAN"]
artifacts = [
    "src/nodetool/package_metadata/nodetool-huggingface.json",
    "src/nodetool/assets/nodetool-huggingface/Summarize Audio.jpg",
    "src/nodetool/assets/nodetool-huggingface/Upscaling.jpg",
    "src/nodetool/assets/nodetool-huggingface/Object Detection.jpg",
    "src/nodetool/assets/nodetool-huggingface/Image Enhance.jpg",
    "src/nodetool/assets/nodetool-huggingface/Stable Diffusion.jpg",
    "src/nodetool/assets/nodetool-huggingface/Piano Track.jpg",
    "src/nodetool/assets/nodetool-huggingface/Segmentation.jpg",
    "src/nodetool/assets/nodetool-huggingface/Audio To Image.jpg",
    "src/nodetool/assets/nodetool-huggingface/Style Transfer.jpg",
    "src/nodetool/assets/nodetool-huggingface/Transcribe Audio.jpg",
    "src/nodetool/assets/nodetool-huggingface/Movie Posters.jpg",
    "src/nodetool/assets/nodetool-huggingface/Audio To Spectrogram.jpg",
    "src/nodetool/assets/nodetool-huggingface/Depth Estimation.jpg",
    "src/nodetool/assets/nodetool-huggingface/Add Subtitles To Video.jpg",
    "src/nodetool/assets/nodetool-huggingface/stable_diffusion_xl.jpg",
    "src/nodetool/assets/nodetool-huggingface/Pokemon Maker.jpg",
    "src/nodetool/assets/nodetool-huggingface/Controlnet.png",
    "src/nodetool/assets/nodetool-huggingface/Controlnet.jpg",
    "src/nodetool/assets/nodetool-huggingface/Image to Image.jpg",
    "src/nodetool/assets/nodetool-huggingface/Re-Imagine.jpg",
]
