[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodetool-huggingface"
version = "0.6.2-rc.16"
description = "HuggingFace nodes for Nodetool"
readme = "README.md"
authors = [{ name = "Matthias Georgi", email = "matti.georgi@gmail.com" }]
requires-python = ">=3.10.13"

dependencies = [
    "nodetool-core==0.6.2-rc.16",
    "torch==2.9.0",
    "nunchaku ; platform_system != 'Darwin'",
    "torchsde",
    "torchvision",
    "torchaudio",
    "hf_xet",
    "kokoro>=0.9.4",
    "diffusers[torch]>=0.35.1",
    "llama-index-embeddings-huggingface>=0.6.1",
    "transformers>=4.56.0",
    "huggingface_hub>=0.25.2",
    "accelerate>=0.34.0",
    "safetensors>=0.4.2",
    "paddleocr",
    "paddlepaddle",
    "peft>=0.17.0",
    "sentencepiece",
    "sam2",
    "accelerate",
    "qwen-vl-utils",
    "bitsandbytes",
]


[tool.hatch.build.targets.wheel]
packages = ["src/nodetool", "src/RealESRGAN"]
artifacts = [
    "src/nodetool/package_metadata/nodetool-huggingface.json",
    "src/nodetool/assets/nodetool-huggingface/Summarize Audio.jpg",
    "src/nodetool/assets/nodetool-huggingface/Upscaling.jpg",
    "src/nodetool/assets/nodetool-huggingface/Object Detection.jpg",
    "src/nodetool/assets/nodetool-huggingface/Image Enhance.jpg",
    "src/nodetool/assets/nodetool-huggingface/Stable Diffusion.jpg",
    "src/nodetool/assets/nodetool-huggingface/Piano Track.jpg",
    "src/nodetool/assets/nodetool-huggingface/Segmentation.jpg",
    "src/nodetool/assets/nodetool-huggingface/Audio To Image.jpg",
    "src/nodetool/assets/nodetool-huggingface/Style Transfer.jpg",
    "src/nodetool/assets/nodetool-huggingface/Transcribe Audio.jpg",
    "src/nodetool/assets/nodetool-huggingface/Movie Posters.jpg",
    "src/nodetool/assets/nodetool-huggingface/Audio To Spectrogram.jpg",
    "src/nodetool/assets/nodetool-huggingface/Depth Estimation.jpg",
    "src/nodetool/assets/nodetool-huggingface/Add Subtitles To Video.jpg",
    "src/nodetool/assets/nodetool-huggingface/stable_diffusion_xl.jpg",
    "src/nodetool/assets/nodetool-huggingface/Pokemon Maker.jpg",
    "src/nodetool/assets/nodetool-huggingface/Controlnet.png",
    "src/nodetool/assets/nodetool-huggingface/Controlnet.jpg",
    "src/nodetool/assets/nodetool-huggingface/Image to Image.jpg",
    "src/nodetool/assets/nodetool-huggingface/Re-Imagine.jpg",
    "package_metadata/nodetool-huggingface.json",
    "assets/nodetool-huggingface/Image to Image.jpg",
    "assets/nodetool-huggingface/Stable Diffusion.jpg",
    "assets/nodetool-huggingface/Image Enhance.jpg",
    "assets/nodetool-huggingface/Segmentation.jpg",
    "assets/nodetool-huggingface/Pokemon Maker.jpg",
    "assets/nodetool-huggingface/stable_diffusion_xl.jpg",
    "assets/nodetool-huggingface/Audio To Image.jpg",
    "assets/nodetool-huggingface/Re-Imagine.jpg",
    "assets/nodetool-huggingface/Audio To Spectrogram.jpg",
    "assets/nodetool-huggingface/Object Detection.jpg",
    "assets/nodetool-huggingface/Add Subtitles To Video.jpg",
    "assets/nodetool-huggingface/Upscaling.jpg",
    "assets/nodetool-huggingface/Depth Estimation.jpg",
    "assets/nodetool-huggingface/Movie Posters.jpg",
    "assets/nodetool-huggingface/Piano Track.jpg",
    "assets/nodetool-huggingface/Controlnet.jpg",
    "assets/nodetool-huggingface/Summarize Audio.jpg",
    "assets/nodetool-huggingface/Transcribe Audio.jpg",
    "assets/nodetool-huggingface/Style Transfer.jpg",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
nodetool = [
    "package_metadata/nodetool-huggingface.json",
    "assets/nodetool-huggingface/Image to Image.jpg",
    "assets/nodetool-huggingface/Stable Diffusion.jpg",
    "assets/nodetool-huggingface/Image Enhance.jpg",
    "assets/nodetool-huggingface/Segmentation.jpg",
    "assets/nodetool-huggingface/Pokemon Maker.jpg",
    "assets/nodetool-huggingface/stable_diffusion_xl.jpg",
    "assets/nodetool-huggingface/Audio To Image.jpg",
    "assets/nodetool-huggingface/Re-Imagine.jpg",
    "assets/nodetool-huggingface/Audio To Spectrogram.jpg",
    "assets/nodetool-huggingface/Object Detection.jpg",
    "assets/nodetool-huggingface/Add Subtitles To Video.jpg",
    "assets/nodetool-huggingface/Upscaling.jpg",
    "assets/nodetool-huggingface/Depth Estimation.jpg",
    "assets/nodetool-huggingface/Movie Posters.jpg",
    "assets/nodetool-huggingface/Piano Track.jpg",
    "assets/nodetool-huggingface/Controlnet.jpg",
    "assets/nodetool-huggingface/Summarize Audio.jpg",
    "assets/nodetool-huggingface/Transcribe Audio.jpg",
    "assets/nodetool-huggingface/Style Transfer.jpg",
]
